# T-AI

./: pyproject.toml
src/T_AI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ai/: ai.py
src/main/: __init__.py  main.py
