[project]
name = "T-AI"
version = "1.0.0"
description = "Terminal AI agent"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.scripts]
main = "main.main:hello"
ai = "ai.ai:main"


[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
venvPath = "."
venv = ".venv"
